login design alignment issue solved

--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 670px;
+    overflow-y: hidden;
     background-color: #f0f0f0;
   }
   
